fixing the bugs

--- a/app/config.json
+++ b/app/config.json
@@ -11,8 +11,7 @@
         "port": "3306",
         "user": "root",
         "pass": "Root@1234#",
-        "name": "article"
+        "name": "sakila"
     }
   
   }
-  
